Stop map controls hiding behind title bar in mobile view

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -1052,7 +1052,7 @@ html.js #map .noscript {
 // OpenLayers fix for navigation being top right
 // Left and right so that zoom can be left, pan right.
 #fms_pan_zoom {
-  top: 0.5em;
+  top: 2.5em; // leave space for "Place pin on map" title bar on mobile
   #{$left}: 0.5em;
   #{$right}: 0.5em;
 }
